Fixed a text-wrapping issue for the links in the list.

--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,7 @@ button:-moz-focusring {
 	overflow: hidden;
 	text-decoration: none;
 	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .item > .remove {
